--- a/static/style/root.css
+++ b/static/style/root.css
@@ -32,12 +32,13 @@
 }
 
 .form__input {
+	font-family: 'Mukta', sans-serif;
 	display: block;
 	width: 100%;
 	padding: 15px 20px;
 	font-size: 18px;
 	border: var(--input-border);
-	border-radius: 50px;
+	border-radius: 30px;
 }
 
 .button {
