--- a/static/style/header.css
+++ b/static/style/header.css
@@ -32,6 +32,8 @@
 }
 
 .header__logo {
+	text-transform: uppercase;
+	text-decoration: none;
 	font-size: 36px;
 	font-weight: 700;
 	color: var(--color-text-primary);
