--- a/static/style/reset.css
+++ b/static/style/reset.css
@@ -122,12 +122,12 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-svg {
+svg, img {
 	width: 100%;
 	height: 100%;
 }
 body {
-	font-family: 'Mukta', sans-serif;
+	font-family: 'Geologica', sans-serif;
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
