--- a/static/style/global.css
+++ b/static/style/global.css
@@ -1,4 +1,12 @@
+.wrapper {
+	flex: content;
+	display: flex;
+	flex-direction: column;
+	background: var(--color-bg-secondary);
+}
+
 .button {
+    border: none;
     border-radius: 100px;
     transition: 0.2s;
 	cursor: pointer;
@@ -9,4 +17,28 @@
 .button:hover {
     color: var(--color-btn-primary);
     background: var(--color-btn-secondary);
+}
+
+.button-second {
+	transition: 0.2s;
+	border: none;
+	cursor: pointer;
+	background: var(--color-btn-third);
+	color: var(--color-btn-secondary);
+}
+
+.button-second:hover {
+	background: var(--color-btn-secondary);
+	color: var(--color-btn-third);
+}
+
+.form__input {
+	font-family: 'Geologica', sans-serif;
+	display: block;
+	width: 100%;
+	padding: 2px 44px 2px 20px;
+	border: var(--input-border);
+	border-radius: 20px;
+    font-weight: 400;
+    font-size: 16px;
 }
