--- a/static/style/root.css
+++ b/static/style/root.css
@@ -23,67 +23,14 @@
 
 	--color-btn-primary: var(--color-orange);
 	--color-btn-secondary: var(--color-white);
+	--color-btn-third: var(--color-blue);
 
 	--color-hover-primary: var(--color-blue-light);
 
-	--input-border: none;
+	--color-input-border: var(--color-blue);
 	--input-bg: var(--color-bg-secondary);
 
 	--border-primary: 1px solid var(--color-border-secondary);
-}
-
-.wrapper {
-	flex: content;
-	display: flex;
-	flex-direction: column;
-	background: var(--color-bg-secondary);
-}
-
-.main-background {
-	position: relative;
-	background-image: url(/img/honeycomb-background.avif);
-}
-.main-background::after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background: #ffffffd5;
-}
-
-.form__input {
-	/* font-family: 'Mukta', sans-serif; */
-	display: block;
-	width: 100%;
-	padding: 10px 20px;
-	font-size: 18px;
-	border: var(--input-border);
-	border-radius: 30px;
-}
-
-/* .button {
-	padding: 20px 40px;
-	font-size: 22px;
-	max-width: 400px;
-	margin: 0 auto;
-	border-radius: 40px;
-	border: none;
-	background: var(--color-bg-button);
-	cursor: pointer;
-	color: var(--color-text-secondary);
-	transition: 0.2s;
-} */
-
-/* .button:hover {
-	opacity: 0.9;
-} */
-
-.input-name {
-	font-weight: 500;
-	font-size: 18px;
-	/* color: red !important; */
 }
 
 .section-name {
@@ -93,7 +40,7 @@
 }
 
 .form__text {
-	font-size: 18px;
+	/* font-size: 18px; */
 	/* color: orange !important; */
 }
 
