--- a/static/style/global.css
+++ b/static/style/global.css
@@ -54,3 +54,9 @@
     font-weight: 400;
     font-size: 16px;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
