add validate step1 and step2

--- a/static/style/global.css
+++ b/static/style/global.css
@@ -57,6 +57,11 @@
 
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
+
+.invalid {
+	outline: 2px solid var(--color-invalid);
+}
+
