--- a/static/style/root.css
+++ b/static/style/root.css
@@ -12,7 +12,7 @@
 
 	--color-border-primary: #000000;
 	--color-border-secondary: #ffd883;
-	--color-invalid: red;
+	--color-invalid: #EF3E3E;
 
 	--color-bg-primary: var(--color-blue);
 	--color-bg-secondary: var(--color-white);
